--- a/Freight Transportation/index.html
+++ b/Freight Transportation/index.html
@@ -201,7 +201,7 @@
                             В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
                             используя
                             Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных
-                            изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                            изменений пять веков, но и перешагнул в электронный дизайн</p>
                     </div>
                     <div class="about-company-header-right">
                         <div class="about-company__blocks">
